# Polls-project

./: README.md  Readme.md  pyproject.toml
services/: accentuation.py  accentuation_types.py  parameters.py
