[tool.poetry]
name = "polls-project"
version = "0.1.0"
description = "Project aimed to implement Pathoharacterological diagnostic questionnaire"
authors = ["Teamerol <fadeew.alex@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "3.7.4"
aiohttp-jinja2 = "1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
